--- a/CS-Source-Multihack.vcxproj
+++ b/CS-Source-Multihack.vcxproj
@@ -801,8 +801,10 @@
     <ClInclude Include="include\nlohmann\json.hpp" />
     <ClInclude Include="src\base.h" />
     <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\utils\d3d9dummy.h" />
     <ClInclude Include="src\utils\hookmgr.h" />
     <ClInclude Include="src\utils\vmtmgr.h" />
+    <ClInclude Include="src\utils\windowdata.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include=".\include\hl2sdk-css\lib\public\bitmap.lib" />
@@ -856,13 +858,17 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\base.cpp" />
+    <ClCompile Include="src\hooks\EndScene.cpp" />
+    <ClCompile Include="src\hooks\WndProc.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\utils\d3d9dummy.cpp" />
     <ClCompile Include="src\utils\hookmgr.cpp" />
     <ClCompile Include="src\utils\vmtmgr.cpp" />
+    <ClCompile Include="src\utils\windowdata.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="assets\readme.txt" />
