--- a/CS-Source-Multihack.vcxproj
+++ b/CS-Source-Multihack.vcxproj
@@ -72,28 +72,28 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(ProjectDir)build\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)build\$(Platform)\$(Configuration)\bin\</IntDir>
-    <IgnoreImportLibrary>true</IgnoreImportLibrary>
+    <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(ProjectDir)build\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)build\$(Platform)\$(Configuration)\bin\</IntDir>
-    <IgnoreImportLibrary>true</IgnoreImportLibrary>
+    <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(ProjectDir)build\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)build\$(Platform)\$(Configuration)\bin\</IntDir>
-    <IgnoreImportLibrary>true</IgnoreImportLibrary>
+    <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(ProjectDir)build\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)build\$(Platform)\$(Configuration)\bin\</IntDir>
-    <IgnoreImportLibrary>true</IgnoreImportLibrary>
+    <IgnoreImportLibrary>false</IgnoreImportLibrary>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)src;$(ProjectDir)assets;$(DXSDK_DIR)Include;$(ProjectDir)include\hl2sdk-css;$(ProjectDir)include\hl2sdk-css\common;$(ProjectDir)include\hl2sdk-css\public;$(ProjectDir)include\hl2sdk-css\public\tier0;$(ProjectDir)include\hl2sdk-css\public\tier1;$(ProjectDir)include\hl2sdk-css\vgui2\include;$(ProjectDir)include\hl2sdk-css\vgui2\controls;$(ProjectDir)include\hl2sdk-css\game\shared;$(ProjectDir)include\hl2sdk-css\game_controls;hl2mp\UI;$(ProjectDir)include\hl2sdk-css\hl2mp;$(ProjectDir)include\hl2sdk-css\game\shared\hl2mp;$(ProjectDir)include\hl2sdk-css\hl2;$(ProjectDir)include\hl2sdk-css\hl2\elements;$(ProjectDir)include\hl2sdk-css\game\shared\hl2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;NO_STRING_T;CLIENT_DLL;VECTOR;ENABLE_HTMLWINDOW;HL2MP;HL2_CLIENT_DLL;VERSION_SAFE_STEAM_API_INTERFACES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -103,13 +103,15 @@
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\x86;$(ProjectDir)include\hl2sdk-css\lib\common;$(ProjectDir)include\hl2sdk-css\include\hl2sdk-css\lib\public;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SupportUnloadOfDelayLoadedDLL>
+      </SupportUnloadOfDelayLoadedDLL>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)src;$(ProjectDir)assets;$(DXSDK_DIR)Include;$(ProjectDir)include\hl2sdk-css;$(ProjectDir)include\hl2sdk-css\common;$(ProjectDir)include\hl2sdk-css\public;$(ProjectDir)include\hl2sdk-css\public\tier0;$(ProjectDir)include\hl2sdk-css\public\tier1;$(ProjectDir)include\hl2sdk-css\vgui2\include;$(ProjectDir)include\hl2sdk-css\vgui2\controls;$(ProjectDir)include\hl2sdk-css\game\shared;$(ProjectDir)include\hl2sdk-css\game_controls;hl2mp\UI;$(ProjectDir)include\hl2sdk-css\hl2mp;$(ProjectDir)include\hl2sdk-css\game\shared\hl2mp;$(ProjectDir)include\hl2sdk-css\hl2;$(ProjectDir)include\hl2sdk-css\hl2\elements;$(ProjectDir)include\hl2sdk-css\game\shared\hl2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;NO_STRING_T;CLIENT_DLL;VECTOR;ENABLE_HTMLWINDOW;HL2MP;HL2_CLIENT_DLL;VERSION_SAFE_STEAM_API_INTERFACES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -119,6 +121,8 @@
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\x64;$(ProjectDir)include\hl2sdk-css\lib\common;$(ProjectDir)include\hl2sdk-css\include\hl2sdk-css\lib\public;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SupportUnloadOfDelayLoadedDLL>
+      </SupportUnloadOfDelayLoadedDLL>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -127,7 +131,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)src;$(ProjectDir)assets;$(DXSDK_DIR)Include;$(ProjectDir)include\hl2sdk-css;$(ProjectDir)include\hl2sdk-css\common;$(ProjectDir)include\hl2sdk-css\public;$(ProjectDir)include\hl2sdk-css\public\tier0;$(ProjectDir)include\hl2sdk-css\public\tier1;$(ProjectDir)include\hl2sdk-css\vgui2\include;$(ProjectDir)include\hl2sdk-css\vgui2\controls;$(ProjectDir)include\hl2sdk-css\game\shared;$(ProjectDir)include\hl2sdk-css\game_controls;hl2mp\UI;$(ProjectDir)include\hl2sdk-css\hl2mp;$(ProjectDir)include\hl2sdk-css\game\shared\hl2mp;$(ProjectDir)include\hl2sdk-css\hl2;$(ProjectDir)include\hl2sdk-css\hl2\elements;$(ProjectDir)include\hl2sdk-css\game\shared\hl2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;NO_STRING_T;CLIENT_DLL;VECTOR;ENABLE_HTMLWINDOW;HL2MP;HL2_CLIENT_DLL;VERSION_SAFE_STEAM_API_INTERFACES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -139,6 +143,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\x86;$(ProjectDir)include\hl2sdk-css\lib\common;$(ProjectDir)include\hl2sdk-css\include\hl2sdk-css\lib\public;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SupportUnloadOfDelayLoadedDLL>
+      </SupportUnloadOfDelayLoadedDLL>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +153,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)src;$(ProjectDir)assets;$(DXSDK_DIR)Include;$(ProjectDir)include\hl2sdk-css;$(ProjectDir)include\hl2sdk-css\common;$(ProjectDir)include\hl2sdk-css\public;$(ProjectDir)include\hl2sdk-css\public\tier0;$(ProjectDir)include\hl2sdk-css\public\tier1;$(ProjectDir)include\hl2sdk-css\vgui2\include;$(ProjectDir)include\hl2sdk-css\vgui2\controls;$(ProjectDir)include\hl2sdk-css\game\shared;$(ProjectDir)include\hl2sdk-css\game_controls;hl2mp\UI;$(ProjectDir)include\hl2sdk-css\hl2mp;$(ProjectDir)include\hl2sdk-css\game\shared\hl2mp;$(ProjectDir)include\hl2sdk-css\hl2;$(ProjectDir)include\hl2sdk-css\hl2\elements;$(ProjectDir)include\hl2sdk-css\game\shared\hl2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;NO_STRING_T;CLIENT_DLL;VECTOR;ENABLE_HTMLWINDOW;HL2MP;HL2_CLIENT_DLL;VERSION_SAFE_STEAM_API_INTERFACES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -159,6 +165,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(DXSDK_DIR)Lib\x64;$(ProjectDir)include\hl2sdk-css\lib\common;$(ProjectDir)include\hl2sdk-css\include\hl2sdk-css\lib\public;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SupportUnloadOfDelayLoadedDLL>
+      </SupportUnloadOfDelayLoadedDLL>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
